--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,27 @@
-plugins {
-    id 'java'
-}
+allprojects {
+    repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url 'https://plugins.gradle.org/m2/' }
+    }
 
-group 'me.iqq'
-version '1.0-SNAPSHOT'
+    version = '1.0'
 
-sourceCompatibility = 1.8
+    apply plugin: 'java'
 
-repositories {
-//    mavenCentral()
-    maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
-    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-    maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
-    maven { url 'https://plugins.gradle.org/m2/' }
-}
+    jar {
+        manifest.attributes provider: 'gradle'
+    }
 
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-}
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+    }
 
-dependencies {
-//    testCompile group: 'junit', name: 'junit', version: '5'
-    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
-}
-
-dependencies {
-    testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
-}
-
-test {
-    useJUnitPlatform()
-    testLogging {
-        events "passed", "skipped", "failed"
+    dependencies {
+        testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version:'1.6.2'
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version:'5.6.2'
+        testCompile group: 'org.junit.vintage', name: 'junit-vintage-engine', version:'5.6.2'
     }
 }
 
