🍅  migrate to linux platform

--- a/server/src/main/resources/database.properties
+++ b/server/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://127.0.0.1:3306/fqq?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&autoReconnectForPools=true
 username=root
-password=root
+password=rootroot
 filters=stat
 initialSize=2
 minIdle=2
