--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
-#Sat May 16 09:32:53 CST 2020
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.7-bin.zip
+#Wed Dec 23 21:10:02 CST 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.7-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
