--- a/http/src/main/resources/application.yml
+++ b/http/src/main/resources/application.yml
@@ -6,9 +6,13 @@ spring:
       write-dates-as-timestamps: true
   profiles:
     active: prod, dev
-
+  servlet:
+    multipart:
+      max-file-size: 1024000000
+      max-request-size: 2048000000
 mybatis:
   mapper-locations: classpath:mapper/**/*Mapper.xml
   configuration:
     use-generated-keys: true
     use-column-label: true
+  # Single file max size  即单个文件大小
